# openproject-cli

./: .gitignore  README.md  openproject-cli-0.2.0.r26.gf179b80-1-any.pkg.tar.zst  openproject_cli.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/arch/: .SRCINFO  PKGBUILD
scripts/: release.sh
src/openproject_cli/: __init__.py  attachment_commands.py  commands.py  config.py  core.py  parser.py  parser_helpers.py  transport.py
tests/: test_auth.py  test_commands.py  test_config.py  test_contracts.py  test_core.py  test_rendering.py  test_transport.py
