[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openproject-cli"
version = "0.1.0"
description = "Small command-line client for OpenProject API v3"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.11"

[dependency-groups]
dev = []

[project.scripts]
openproject = "openproject_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
