[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openproject-cli"
version = "0.1.0"
description = "Small command-line client for OpenProject API v3"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[project.scripts]
openproject = "openproject_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.mypy]
python_version = "3.11"
files = ["src/openproject_cli"]
strict = true
warn_unused_configs = true
